--- a/styles/style.css
+++ b/styles/style.css
@@ -165,3 +165,35 @@ top players style
 .course-duration span {
     font-size: 14px;
 }
+
+/* ------------------------------
+            media queries 
+------------------------------*/
+
+/* Mobile devise */
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+        padding: 0px;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog {
+        flex-direction: column;
+    }
+}
+
+/* Medium Device */
+@media only screen and (min-width:688px) and (max-width:992px){
+    .container{
+        width: 100%;
+        padding: 0px;
+    }
+    .players, .courses{
+       grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
